# XDepends

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  global.h  xdepends_source.pro
console_source/: console_source.pro  main_console.cpp
gui_source/: gui_source.pro  guimainwindow.cpp  guimainwindow.h  guimainwindow.ui  main_gui.cpp
packaging/debian/: build_dpkg.sh
packaging/macos/: build_mac.sh
packaging/windows/: build_portable_windows.cmd
res/linux/: xdepends.desktop.in
res/windows/: windows.manifest.xml
src/: CMakeLists.txt  global.h
src/console/: CMakeLists.txt  main_console.cpp
src/gui/: CMakeLists.txt  dialogoptions.cpp  dialogoptions.h  dialogoptions.ui  main_gui.cpp
